@@ -8,8 +8,8 @@ import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import org.springframework.web.method.HandlerMethod;
 
-import im.toduck.global.annotation.ApiErrorResponseExample;
-import im.toduck.global.annotation.ApiErrorResponseExamples;
+import im.toduck.global.annotation.swagger.ApiErrorResponseExplanation;
+import im.toduck.global.annotation.swagger.ApiResponseExplanations;
 import im.toduck.global.exception.ExceptionCode;
 import io.swagger.v3.oas.models.Operation;
 import io.swagger.v3.oas.models.examples.Example;
@@ -22,54 +22,55 @@ import lombok.Getter;
 
 /**
  * {@code ApiErrorResponseHandler} 클래스는 애플리케이션 내의 예외 상황에 대한
- * 공통 응답을 Swagger API 문서에 반영하는 역할을 수행합니다.
+ * 공통 응답을 Swagger API 문서에 반영합니다.
  *
- * 이 클래스는 컨트롤러 메서드에 정의된 {@link ApiErrorResponseExamples} 또는
- * {@link ApiErrorResponseExample} 어노테이션을 분석하여, 예외 코드에 대응하는
- * HTTP 응답 예제를 Swagger 문서에 추가합니다.
+ * <p>이 클래스는 컨트롤러 메서드에 정의된 복수의 {@link ApiErrorResponseExplanation} 어노테이션을 분석하여,
+ * 예외 코드에 대응하는 HTTP 응답 예제를 Swagger 문서에 추가합니다.</p>
  *
+ * @see ApiErrorResponseExplanation
  */
 @Component
 public class ApiErrorResponseHandler {
+
 	public void handleApiErrorResponse(Operation operation, HandlerMethod handlerMethod) {
-		ApiErrorResponseExamples apiErrorResponseExamples = handlerMethod.getMethodAnnotation(
-			ApiErrorResponseExamples.class);
-		if (apiErrorResponseExamples != null) {
-			generateResponseCodeResponseExample(operation, Arrays.asList(apiErrorResponseExamples.value()));
-		} else {
-			ApiErrorResponseExample apiErrorResponseExample = handlerMethod.getMethodAnnotation(
-				ApiErrorResponseExample.class);
-			if (apiErrorResponseExample != null) {
-				generateResponseCodeResponseExample(operation, List.of(apiErrorResponseExample.value()));
-			}
+		ApiResponseExplanations apiResponseExplanations
+			= handlerMethod.getMethodAnnotation(ApiResponseExplanations.class);
+
+		if (apiResponseExplanations != null) {
+			generateResponseCodeResponseExample(operation, Arrays.asList(apiResponseExplanations.errors()));
 		}
 	}
 
-	private void generateResponseCodeResponseExample(Operation operation, List<ExceptionCode> exceptionCodes) {
+	private void generateResponseCodeResponseExample(Operation operation,
+		List<ApiErrorResponseExplanation> apiErrorResponseExamples) {
 		ApiResponses responses = operation.getResponses();
 
-		Map<Integer, List<ExampleHolder>> statusWithExampleHolders = exceptionCodes.stream()
+		Map<Integer, List<ExampleHolder>> statusWithExampleHolders = apiErrorResponseExamples.stream()
 			.map(this::createExampleHolder)
 			.collect(Collectors.groupingBy(ExampleHolder::getHttpStatusCode));
 
 		addExamplesToResponses(responses, statusWithExampleHolders);
 	}
 
-	private ExampleHolder createExampleHolder(ExceptionCode exceptionCode) {
+	private ExampleHolder createExampleHolder(ApiErrorResponseExplanation apiErrorResponseExample) {
+		ExceptionCode exceptionCode = apiErrorResponseExample.exceptionCode();
 		return ExampleHolder.builder()
 			.httpStatusCode(exceptionCode.getHttpStatus().value())
 			.name(exceptionCode.name())
 			.errorCode(exceptionCode.getErrorCode())
-			.holder(createSwaggerExample(exceptionCode))
+			.description(apiErrorResponseExample.description())
+			.holder(createSwaggerExample(exceptionCode, apiErrorResponseExample.description()))
 			.build();
 	}
 
-	private Example createSwaggerExample(ExceptionCode exceptionCode) {
+	private Example createSwaggerExample(ExceptionCode exceptionCode, String description) {
 		im.toduck.global.presentation.ApiResponse<Object> apiResponse
 			= im.toduck.global.presentation.ApiResponse.createError(exceptionCode);
 
 		Example example = new Example();
 		example.setValue(apiResponse);
+		example.setDescription(description); // 설명을 예제에 추가
+
 		return example;
 	}
 
@@ -98,6 +99,7 @@ public class ApiErrorResponseHandler {
 		private final int httpStatusCode;
 		private final String name;
 		private final int errorCode;
+		private final String description;
 		private final Example holder;
 	}
 }
